--- a/gallery.html
+++ b/gallery.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <title>Page Under Construction</title>
-  <link rel="stylesheet" href="../static/gallery.css">
+  <link rel="stylesheet" href="./static/gallery.css">
 </head>
 <body>
   <div class="container">
     <h1>Page Under Construction</h1>
     <p>This page is currently under development and is not yet fully functional.</p>
-    <a href="index.html">Return to Homepage</a>
+    <a href="./landing.html">Return to Homepage</a>
   </div>
 </body>
 </html>
