--- a/donation_page.html
+++ b/donation_page.html
@@ -6,18 +6,19 @@
     <title>King Clinton Foundations</title>
     <link rel="stylesheet" href="./static/css/donation_page.css">
     <link rel="stylesheet" href="./static/css/footer.css">
+    <link rel="shortcut icon" href="static/media/logo.png" type="image/x-icon">
     <script src="https://js.paystack.co/v1/inline.js"></script>
-    <script src="./static/js/payment.js"></script>
-
-    <script src="https://kit.fontawesome.com/cd05a9839f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+<!-- Preloader -->
+<div class="preloader" id="preloader">
+    <img src="static/media/logo.png" alt="Loading...">
+</div>
 
 <header class="header">
     <div class="header-container">
         <img src="./static/media/logo.png" alt="King Clinton Children Foundations" class="logo">
-        <h1>Empower a Child's Future</h1>
-        <p>Join us in nurturing vulnerable children and building brighter futures.</p>
     </div>
 </header>
 
@@ -27,17 +28,21 @@
             <h2>Make a Difference Today</h2>
             <p>Your donation can transform a child’s life. Join us in making a lasting impact.</p>
         </div>
-        <form class="donation-form">
+        <form class="donation-form" onsubmit="event.preventDefault(); payWithPaystack();">
             <label for="email">E-Mail Address:</label>
             <input type="email" id="email" class="input-field" placeholder="Enter your email" required>
 
             <label for="phone-number">Phone Number:</label>
-            <input type="tel" id="phone-number" class="input-field" placeholder="Enter your phone number" required>
+            <input type="tel" id="phoneNumber" class="input-field" placeholder="Enter your phone number" required>
 
-            <button class="payment-button" type="button" onclick="payWithPaystack()">Donate Now</button>
+            <label for="transferAmount">Amount (in Naira):</label>
+            <input type="number" id="transferAmount" class="input-field" placeholder="Enter amount" required>
+
+            <button class="payment-button" type="submit">Donate Now</button>
         </form>
     </section>
 </main>
+
 
 <footer class="foundation-footer">
 <div class="footer-container">
@@ -51,12 +56,12 @@
     <div class="footer-links">
         <h4>Quick Links</h4>
         <ul>
-            <li><a href="landing.html#stories">Projects</a></li>
-            <li><a href="landing.html#gallery">Our Gallery</a></li>
+            <li><a href="index.html#stories">Projects</a></li>
+            <li><a href="index.html#gallery">Our Gallery</a></li>
             <li><a href="./donation_page.html">Donate</a></li>
             <!-- Add whatsapp of mail link -->
             <li><a href="malito:kingclintonfoundation@gmail.com">Volunteer</a></li>
-            <li><a href="landing.html#whatwedo">What we do</a></li>
+            <li><a href="index.html#whatwedo">What we do</a></li>
         </ul>
     </div>
 
@@ -72,7 +77,7 @@
     <div class="footer-donation">
         <h4>Nurture a Child Today</h4>
         <p>Empower a child's future through care and support today—your kindness can spark a lifetime of change.</p>
-        <button class="donate-button"><a href="./landing.html">Return to Home</a></button>
+        <a href="./index.html"><button class="donate-button">Return to Home</button></a>
     </div>
 </div>
 
@@ -98,5 +103,11 @@
 </footer>
 
 
+
+<script src="./static/js/payment.js"></script>
+<script src="./static/js/script.js"></script>
+
+<script src="https://js.paystack.co/v1/inline.js"></script>
+<script src="https://kit.fontawesome.com/cd05a9839f.js" crossorigin="anonymous"></script>
 </body>
 </html>
